objects/Transport_order__c.object
<CustomObject>
    <description>This object tracks the transport needed to carry YPs from one booking to another</description>
    <fields>
        <fullName>APM_Email__c</fullName>
        <label>APM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Address_Override__c</fullName>
        <label>From address Override</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrival_Departure__c</fullName>
        <label>Arrival/ Departure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>arrive at...</fullName>
                </value>
                <value>
                    <fullName>depart at...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>From_Booking__r.Wave__r.Wave_Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Hidden__c</fullName>
        <formula>SUBSTITUTE(TEXT(Date_of_Travel__c),&quot;-&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Optimised__c</fullName>
        <label>Date Optimised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( Earliest_departure_time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of travel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_cancelled__c</fullName>
        <label>Date cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Travel__c</fullName>
        <label>Date of Travel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>De_optimise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline_DateTime__c</fullName>
        <label>Deadline DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Address_Private__c</fullName>
        <label>Departure Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Time_Private__c</fullName>
        <label>Departure Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_Journey_length_mins__c</fullName>
        <description>This is a hidden field written by google that shows how long the journey will take to drive</description>
        <label>Private Journey time (google)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <formula>IF(OR( CONTAINS(Journey__c ,&quot;RCA&quot;),
CONTAINS(Journey__c,&quot;Social Action&quot;)),  DATE(2015,08,14),
DATEVALUE( Earliest_departure_time__c ) +5-
MOD(DATEVALUE( Earliest_departure_time__c ) - DATE(1900, 1, 7), 7)-28)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_this_this_Friday__c</fullName>
        <formula>IF(DATEVALUE( Earliest_departure_time__c ) +5- 

MOD(DATEVALUE( Earliest_departure_time__c ) - DATE(1900, 1, 7), 7)= Due_date__c ,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due this Friday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Arrival_Time__c</fullName>
        <formula>Earliest_departure_time__c + (Journey_Length_mins__c/24/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_departure_time__c</fullName>
        <label>Earliest departure time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_cost__c</fullName>
        <formula>IF(ISPICKVAL( Method_of_Transport__c ,&quot;Private&quot;),
IF(
ISBLANK( Team__c ), From_Booking__r.Wave__r.Wave_Cluster__r.X74__c , From_Booking__r.Wave__r.Wave_Cluster__r.X16_seater_cost__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_private_transport_time__c</fullName>
        <formula>IF( Override_private_journey_time__c  = 0,   Driving_Journey_length_mins__c/60   , Override_private_journey_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Private transport time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_public_transport_time__c</fullName>
        <formula>IF( Override_public_journey_time__c  = 0,   Public_transport_Journey_length_mins__c/60   , Override_public_journey_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public transport time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_walking_time__c</fullName>
        <formula>IF( Override_walking_journey_time__c = 0,  Walking_Journey_length__c/60  , Override_walking_journey_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Walking time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Visit_Duration__c</fullName>
        <formula>&quot;00:10&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Visit Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <formula>From_Booking__r.Partner_or_Venue__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address_Geocode__c</fullName>
        <label>From Address (Geocode)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address_Hidden__c</fullName>
        <formula>IF(ISBLANK( Address_Override__c ), 

IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet + &quot;, &quot;) + 
IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingCity ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingCity + &quot;, &quot;) + 
IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingState ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingState + &quot;, &quot;) + 
IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode) 

, Address_Override__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <formula>IF(ISBLANK( Address_Override__c ), 

IF(ISBLANK(From_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode),

IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet + &quot;, &quot;) + 
IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingCity ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingCity + &quot;, &quot;) + 
IF(ISBLANK( From_Booking__r.Partner_or_Venue__r.Account__r.BillingState ), &quot; &quot;, From_Booking__r.Partner_or_Venue__r.Account__r.BillingState + &quot;, &quot;)
,
From_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode
)

, Address_Override__c  )</formula>
        <label>From Address (for google)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Booking_Date__c</fullName>
        <formula>From_Booking__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Booking_Start_Time__c</fullName>
        <formula>From_Booking__r.What_date_time_should_the_wave_arrive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Booking Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Transport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Postcode_Hidden__c</fullName>
        <formula>IF(LEN(From_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c) = 8, 
TRIM(LEFT(From_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 4)) &amp; &quot; &quot; &amp; TRIM(RIGHT(From_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)),
TRIM(LEFT(From_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)) &amp; &quot; &quot; &amp; TRIM(RIGHT(From_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HEREMAPS From Postcode (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_booking_confirmation_date__c</fullName>
        <formula>From_Booking__r.Date_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From booking confirmation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HEREMAPS_Latest_Arrival_Hidden__c</fullName>
        <formula>(TRIM(LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(Latest_Arrival_time__c),&quot;-&quot;,&quot;&quot;),&quot;:&quot;,&quot;&quot;),&quot;Z&quot;,&quot;&quot;),&quot; &quot;,&quot;-&quot;),13)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HEREMAPS Latest Arrival (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAddressChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAddressChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_Length_mins__c</fullName>
        <formula>IF(ISPICKVAL( Method_of_Transport__c ,&quot;Walking&quot;), 

Final_walking_time__c , 

IF(ISPICKVAL( Method_of_Transport__c ,&quot;Public Transport&quot;), 

Final_public_transport_time__c , 

IF(ISPICKVAL( Method_of_Transport__c ,&quot;Private Transport&quot;), 

Final_private_transport_time__c 

, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journey Length (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <formula>LEFT( From_Booking__r.Partner_or_Venue__r.Usage_Type_Formula__c ,LEN(From_Booking__r.Partner_or_Venue__r.Usage_Type_Formula__c)-5)

 &amp; &quot; - &quot; &amp; 

LEFT( To_Booking__r.Partner_or_Venue__r.Usage_Type_Formula__c ,LEN(To_Booking__r.Partner_or_Venue__r.Usage_Type_Formula__c)-5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Arrival_time__c</fullName>
        <label>Latest arrival time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_departure_time__c</fullName>
        <formula>Latest_Arrival_time__c -  (Journey_Length_mins__c /24/60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest departure time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leg1_Arrival_Time__c</fullName>
        <label>Leg1 Arrival Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg1_Destination__c</fullName>
        <label>Leg1 Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg2_Arrival_Time__c</fullName>
        <label>Leg2 Arrival Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg2_Destination__c</fullName>
        <label>Leg2 Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg3_Arrival_Time__c</fullName>
        <label>Leg3 Arrival Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg3_Destination__c</fullName>
        <label>Leg3 Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_provider_website__c</fullName>
        <description>This is a link to the website of the provider that will update by workflow</description>
        <label>Link to provider website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Luggage__c</fullName>
        <label>Luggage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Split__c</fullName>
        <formula>IF(ISBLANK( Team__c ), From_Booking__r.Wave__r.Number_of_Teams__c -  Teams_missing_from_journey__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_of_Transport_Hidden__c</fullName>
        <formula>IF(
	ISPICKVAL( Method_of_Transport__c , &apos;Walking&apos;)
	, &apos;walk&apos;
	, IF(
		ISPICKVAL( Method_of_Transport__c , &apos;Private Transport&apos;)
		, &apos;drive&apos;
		, IF(
			ISPICKVAL( Method_of_Transport__c , &apos;Public Transport&apos;)
			, &apos;publicTransport&apos;
			, &apos;Null&apos;)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HERE MAPS Method of Transport (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Transport__c</fullName>
        <label>Method of Transport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Walking</fullName>
                </value>
                <value>
                    <fullName>Public transport</fullName>
                </value>
                <value>
                    <fullName>Private Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Waypoints__c</fullName>
        <label>Number of Waypoints</label>
        <summaryForeignKey>Waypoint__c.Transport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Optimisation_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optimisation Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optimised_Number__c</fullName>
        <description>If the TO transport method is Private Transport and the To has been submitted, this field will return 1. If these conditions aren&apos;t met, the field will return 0.</description>
        <formula>IF(AND((ISPICKVAL( Method_of_Transport__c,&quot;Private Transport&quot; )),
 (Status__c &lt;&gt; &quot;Journey not submitted&quot;)),
 1, 0)</formula>
        <label>Journey ready (number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_upgraded__c</fullName>
        <formula>IF( ISPICKVAL(Method_of_Transport__c,&quot;Walking&quot;),&quot;No&quot;,

IF( AND(ISPICKVAL(Method_of_Transport__c,&quot;Public Transport&quot;),Final_walking_time__c &gt; From_Booking__r.Wave__r.Wave_Cluster__r.Walking_time_limit__c),&quot;No&quot;,

IF(
AND(Final_walking_time__c &gt; From_Booking__r.Wave__r.Wave_Cluster__r.Walking_time_limit__c,
Final_public_transport_time__c &gt; From_Booking__r.Wave__r.Wave_Cluster__r.Public_transport_limit_mins__c )

,&quot;No&quot;,&quot;Yes&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order upgraded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <formula>IF(
    AND(
        ISBLANK( Override_private_journey_time__c ),
        ISBLANK( Override_public_journey_time__c ),
        ISBLANK( Override_walking_journey_time__c )
    )
    ,
   &quot;No&quot;
    ,
    &quot;Yes&quot;
)</formula>
        <label>Override?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_private_journey_time__c</fullName>
        <label>Override private journey time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_public_journey_time__c</fullName>
        <label>Override public journey time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_walking_journey_time__c</fullName>
        <description>This will override the walking journey time set by google</description>
        <label>Override walking journey time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAX__c</fullName>
        <label>PAX (Old)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Approval__c</fullName>
        <label>PM Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Rejection__c</fullName>
        <label>PM Rejection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_check__c</fullName>
        <formula>IF( AND( 

OR( 
From_Booking__r.Wave__r.Wave_APM__c= $User.Id ,
From_Booking__r.Wave__r.PM__c= $User.Id ,
From_Booking__r.Wave__r.PA__c= $User.Id ,
From_Booking__r.Wave__r.SPM1__c= $User.Id ,
From_Booking__r.Wave__r.Summer_Manager__c= $User.Id ,
From_Booking__r.Wave__r.Zonal_APM__c= $User.Id ,
From_Booking__r.Wave__r.Support_APM_5__c= $User.Id ,
From_Booking__r.Wave__r.Programme_Administrator_2__c= $User.Id , 
From_Booking__r.Wave__r.Support_APM__c= $User.Id ,
From_Booking__r.Wave__r.support_APM_2__c= $User.Id ,
From_Booking__r.Wave__r.Support_APM_3__c= $User.Id ,
From_Booking__r.Wave__r.Support_APM_4__c= $User.Id ,
From_Booking__r.Wave__r.Support_PAM_1__c= $User.Id ,
From_Booking__r.Wave__r.Support_PAM_2__c= $User.Id ,
From_Booking__r.Wave__r.Support_PAM_3__c= $User.Id ,
From_Booking__r.Wave__r.Delivery_PM__c= $User.Id ,
From_Booking__r.Wave__r.Support_PM_2__c= $User.Id)

,YEAR(TODAY())= YEAR(  Date__c ))
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User View</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_email__c</fullName>
        <label>PM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_rejection_notes__c</fullName>
        <label>PM rejection notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passengers__c</fullName>
        <formula>IF(

Contains(Journey__c,&quot;Sport&quot;),16, 

IF(ISBLANK( Team__c ), 

IF( 

AND(ISPICKVAL(From_Booking__r.Wave__r.Pilot__c ,&quot;Residential Practitioner&quot;), 
NOT(CONTAINS( Journey__c ,&quot;RCA Big Challenge&quot;))
),
From_Booking__r.Wave__r.YP_place_capacity_absolute_maximum__c +11 -(Teams_missing_from_journey__c*16),

From_Booking__r.Wave__r.YP_place_capacity_absolute_maximum__c +9 - (Teams_missing_from_journey__c*16))

,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passengers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_vehicle__c</fullName>
        <label>Previous vehicle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme_Manager__c</fullName>
        <formula>From_Booking__r.Wave__r.PA__r.FirstName &amp;&quot; &quot;&amp; From_Booking__r.Wave__r.PA__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Link_address__c</fullName>
        <label>Provider Link address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_URL_formula__c</fullName>
        <formula>Provider_Link_address__c &amp; Transport_Provider_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running Board Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_transport_Journey_length_mins__c</fullName>
        <description>This is a hidden field written by google that shows how long the journey will take to via public transport</description>
        <label>Public transport time (google)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resubmit_rejected_journey__c</fullName>
        <label>Date Journey Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Running_Board_Link__c</fullName>
        <description>Link to Vehicle Daily Schedule</description>
        <label>Running Board Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Not_in_use__c =TRUE, &quot;Not in use&quot;,

IF(NOT(ISBLANK( Date_Optimised__c )),&quot;Journey Ready&quot;,
IF(
ISBLANK( Resubmit_rejected_journey__c  ), &quot;Journey not submitted&quot;,
IF(
NOT(ISBLANK( PM_Rejection__c )), &quot;Rejected - Please see notes&quot;,
IF(
NOT(ISBLANK( PM_Approval__c )), &quot;Approved (PM)&quot;,
IF(
ISPICKVAL( Method_of_Transport__c , &quot;Walking&quot;),

IF( Final_walking_time__c  &lt;=  From_Booking__r.Wave__r.Wave_Cluster__r.Walking_time_limit__c ,&quot;Journey Ready&quot;, &quot;Awaiting PM Approval&quot;)
,
IF(
ISPICKVAL( Method_of_Transport__c , &quot;Public transport&quot;),
IF(
AND(
Final_walking_time__c  &gt;=  From_Booking__r.Wave__r.Wave_Cluster__r.Walking_time_limit__c,
Final_public_transport_time__c  &lt;=  From_Booking__r.Wave__r.Wave_Cluster__r.Public_transport_limit_mins__c
) 
,&quot;Journey Ready&quot;, &quot;Awaiting PM Approval&quot;),
IF(
ISPICKVAL( Method_of_Transport__c , &quot;Private transport&quot;),
IF( 
AND(
Final_walking_time__c &gt;=  From_Booking__r.Wave__r.Wave_Cluster__r.Walking_time_limit__c,
Final_public_transport_time__c &gt;=  From_Booking__r.Wave__r.Wave_Cluster__r.Public_transport_limit_mins__c
) 
,&quot;Approved (auto)&quot;, &quot;Awaiting PM Approval&quot;),

&quot;Not started&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMS_Status__c</fullName>
        <formula>IF(
AND(

 Date__c &gt;=TODAY()

,

OR( Status__c = &quot;Journey Ready&quot;,
Status__c = &quot;Approved (PM)&quot;)
)
,

&quot;Active&quot;,&quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>IF(ISBLANK( From_Booking__r.Team__r.Name ), To_Booking__r.Team__r.Name ,From_Booking__r.Team__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teams_missing_from_journey__c</fullName>
        <label>Teams missing from journey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <inlineHelpText>Enter the time in 24-hour format</inlineHelpText>
        <label>Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Account__c</fullName>
        <formula>To_Booking__r.Partner_or_Venue__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address_Geocode__c</fullName>
        <label>To Address (Geocode)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address_Hidden__c</fullName>
        <formula>IF(ISBLANK(  To_address_override__c  ), 

IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet + &quot;, &quot;) + 
IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingCity ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingCity + &quot;, &quot;) + 
IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingState ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingState + &quot;, &quot;) + 
IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode) 

,To_address_override__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <formula>IF(ISBLANK(  To_address_override__c  ), 

IF(ISBLANK(To_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode),

IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingStreet + &quot;, &quot;) + 
IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingCity ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingCity + &quot;, &quot;) + 
IF(ISBLANK( To_Booking__r.Partner_or_Venue__r.Account__r.BillingState ), &quot; &quot;, To_Booking__r.Partner_or_Venue__r.Account__r.BillingState + &quot;, &quot;)

,
To_Booking__r.Partner_or_Venue__r.Account__r.BillingPostalCode
)

,To_address_override__c )</formula>
        <label>To Address (for google)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Booking_Start_Time__c</fullName>
        <formula>To_Booking__r.What_date_time_should_the_wave_arrive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Booking Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Transport1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Postcode_Hidden__c</fullName>
        <formula>IF(LEN(To_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c) = 8, 
TRIM(LEFT(To_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 4)) &amp; &quot; &quot; &amp; TRIM(RIGHT(To_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)), 
TRIM(LEFT(To_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)) &amp; &quot; &quot; &amp; TRIM(RIGHT(To_Booking__r.Partner_or_Venue__r.Account__r.Postcode__c, 3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HERE MAPS To Postcode (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_address_override__c</fullName>
        <label>To address override</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_booking_confirmation_date__c</fullName>
        <formula>To_Booking__r.Date_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To booking confirmation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transport_Provider_ID__c</fullName>
        <description>This is the unique ID provided by the transport provider for the transport that is assigned to this journey. This will be used to compile a link to the site.</description>
        <label>Transport Provider ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Journey__c</fullName>
        <label>Type of Journey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCKO - PC</fullName>
                </value>
                <value>
                    <fullName>PC - PCR</fullName>
                </value>
                <value>
                    <fullName>TCKO - TC Accom</fullName>
                </value>
                <value>
                    <fullName>TC Accom - TC Venue</fullName>
                </value>
                <value>
                    <fullName>TC Venue - TC Partner</fullName>
                </value>
                <value>
                    <fullName>TC Partner - TC Accom</fullName>
                </value>
                <value>
                    <fullName>TC Partner - TC Venue</fullName>
                </value>
                <value>
                    <fullName>TC Accom - TC Showcase</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walking_Journey_length__c</fullName>
        <description>This is a hidden field written by google that shows how long the journey will take to walk</description>
        <label>Walking Journey time (google)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaveNew__c</fullName>
        <formula>From_Booking__r.Wave__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_APM_Cell__c</fullName>
        <formula>From_Booking__r.Wave__r.Wave_APM__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave APM: Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_APM__c</fullName>
        <formula>From_Booking__r.Wave__r.Wave_APM__r.FirstName &amp; &quot; &quot; &amp; From_Booking__r.Wave__r.Wave_APM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave APM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_ID__c</fullName>
        <formula>From_Booking__r.Wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <formula>IF(ISBLANK(From_Booking__r.Wave__r.Name), To_Booking__r.Wave__r.Name, From_Booking__r.Wave__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_number__c</fullName>
        <description>Displaying the wave number for waves in following formats: 

Bradfield A 5 (1 digit number) 
Bradfield A 12 (2 digit number) 
Bradfield B 13a (2 digit number plus letter)</description>
        <formula>IF(
(LEFT(RIGHT( Wave__c ,2),1)=&quot; &quot;),
RIGHT(Wave__c,1),
IF(
ISNUMBER(RIGHT(Wave__c,2)),
RIGHT(Wave__c,2),
LEFT(RIGHT(Wave__c,3),2)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheelchair_user_on_journey__c</fullName>
        <formula>IF(ISBLANK( From_Booking__r.Team__c ),

IF(ISBLANK( To_Booking__r.Team__c),  From_Booking__r.Wave__r.Wheelchair_user_for_transport__c ,

 To_Booking__r.Team__r.Wheelchair_User_for_Transport__c 

),From_Booking__r.Team__r.Wheelchair_User_for_Transport__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wheelchair user on journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>From_Booking__r.Wave__r.Wave_Cluster__r.Zone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
</CustomObject>